css fixes and changes. good wrap commit

--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -2,5 +2,5 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: 25px;
+  margin-top: 150px;
 }
